--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "debug": "~0.7.4",
     "express": "~3.4.7",
     "familysearch": "~0.0.5",
-    "oauth": "git://github.com/jaredly/node-oauth.git"
+    "oauth": "git://github.com/jaredly/node-oauth.git",
+    "superagent": "^0.21.0"
   },
   "devDependencies": {
     "express": "~3.4.7"
